# cpp-dep-bridge

./: .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  sbom.json  vcpkg.json
.github/workflows/: ci.yml
docs/: classification-normalization-model.md  dependency-model.md
include/depbridge/: version.hpp
include/depbridge/cmake/: file_api_reader.hpp  target_graph_builder.hpp
include/depbridge/enrich/: enrich.hpp  provider.hpp  types.hpp
include/depbridge/enrich/providers/: build_context_provider.hpp
include/depbridge/github/: dependency_submission.hpp
include/depbridge/ingest/: ingest.hpp
include/depbridge/ingest/cmake/: file_api_ingestor.hpp
include/depbridge/model/: classify.hpp  filter.hpp  fingerprint.hpp  ids.hpp  normalize.hpp  types.hpp  variant_normalize.hpp
include/depbridge/sbom/: cyclonedx_writer.hpp
src/cli/: main.cpp
src/enrich/: enrich.cpp
src/enrich/providers/: build_context_provider.cpp
src/ingest/: ingest.cpp
src/ingest/cmake/: file_api_ingestor.cpp
src/model/: classify.cpp  filter.cpp  fingerprint.cpp  ids.cpp  normalize.cpp  variant_normalize.cpp
src/sbom/: cyclonedx_writer.cpp
src/sbom/cyclonedx/: cyclonedx_writer.cpp
tests/: CMakeLists.txt  smoke.cpp
tests/integration/: test_simulated_end_to_end.cpp
tests/integration/fixtures/minimal_cmake/: CMakeLists.txt  README.md
tests/unit/: test_build_context_provider.cpp  test_classify.cpp  test_cyclonedx.cpp  test_enrichment_noop.cpp  test_filter.cpp  test_ids.cpp  test_normalize.cpp  test_variant_normalize.cpp
